[project]
name = "sql-agents"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "langchain-core>=1.4.9",
    "langchain-google-genai>=4.2.7",
    "langchain-ollama>=1.1.0",
    "langgraph>=1.2.9",
    "langgraph-checkpoint-postgres>=3.1.0",
    "opentelemetry-api>=1.44.0",
    "opentelemetry-exporter-otlp>=1.44.0",
    "opentelemetry-sdk>=1.44.0",
    "presidio-analyzer>=2.2.363",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.4",
    "python-json-logger>=4.1.0",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.18.0",
    "redis>=8.0.1",
    "sqlglot>=30.12.0",
    "streamlit>=1.59.2",
    "structlog>=26.1.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
